--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
 				"@radix-ui/react-toggle": "1.1.1",
 				"@radix-ui/react-toggle-group": "1.1.1",
 				"@radix-ui/react-tooltip": "1.1.6",
+				"@sanity/client": "^6.24.1",
 				"@sanity/code-input": "^4.1.2",
-				"@sanity/icons": "^2.8.0",
-				"@sanity/image-url": "^1.0.2",
+				"@sanity/icons": "^3.5.6",
+				"@sanity/image-url": "1",
 				"@sanity/table": "^1.1.2",
-				"@sanity/types": "^3.26.0",
-				"@sanity/ui": "^2.0.1",
-				"@sanity/vision": "^3.26.0",
+				"@sanity/types": "^3.68.1",
+				"@sanity/ui": "^2.10.12",
+				"@sanity/vision": "3",
 				"@splinetool/react-spline": "4.0.0",
 				"@splinetool/runtime": "1.9.54",
 				"@stripe/react-stripe-js": "3.1.1",
@@ -61,24 +62,24 @@
 				"intl-messageformat": "10.7.10",
 				"lucide-react": "0.469.0",
 				"nanoid": "5.0.9",
-				"next": "15.1.1-canary.22",
+				"next": "^15.0.0",
 				"next-mdx-remote": "5.0.0",
-				"next-sanity": "^7.0.12",
+				"next-sanity": "9.8.31",
 				"next-seo": "^6.4.0",
 				"next-sitemap": "^4.2.3",
 				"next-themes": "0.4.4",
-				"react": "19.0.0",
+				"react": "^19.0.0",
 				"react-dom": "19.0.0",
 				"react-hook-form": "^7.49.3",
 				"react-iframe": "^1.8.5",
 				"react-refractor": "^2.1.7",
-				"sanity": "^3.26.0",
+				"sanity": "^3.68.2",
 				"sanity-plugin-asset-source-unsplash": "^1.1.2",
 				"schema-dts": "1.1.2",
 				"server-only": "0.0.1",
 				"sonner": "1.7.1",
 				"stripe": "17.5.0",
-				"styled-components": "^6.1.8",
+				"styled-components": "^6.1",
 				"swr": "^2.2.4",
 				"tailwind-merge": "2.6.0",
 				"tailwindcss-animate": "1.0.7",
