--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 				"intl-messageformat": "10.7.10",
 				"lucide-react": "0.469.0",
 				"nanoid": "5.0.9",
-				"next": "^15.0.0",
+				"next": "15.1.1-canary.22",
 				"next-mdx-remote": "5.0.0",
 				"next-sanity": "9.8.31",
 				"next-seo": "^6.4.0",
